tests/diag/provider-over-local.err
tests/diag/provider-over-local.id:3:1: error: surface '<+>' from 'tests/diag/provider-over-local.id' is already active in this context; activating 'Exporter#39893da74fc02e0e' would conflict
  while activating 'Exporter' (tests/diag/provider-over-local.id:3:1)
